Add javaFX gui for docker image